--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <div class="box">
+        <div class="scores">
+            <p>
+                Computer:
+            </p>
+            <p>
+                You :
+            </p>
+        </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
